tests/fixtures/pass/allow-nested/.chous
# Test: Basic allow rule in nested directory
in docs:
  allow *.md
