tests/fixtures/fail/strict-files/.chous
# Test: Violate strict files mode
in docs:
  strict files
  allow *.md
